# seabattle

./: .clang-uml  CMakeLists.txt  README.md  diagram.puml  report2.docx  report3.docx
data/: controls.cfg  game.sav
src/: CMakeLists.txt  ability.cpp  ability.hpp  ability_manager.cpp  ability_manager.hpp  ability_registration.hpp  ability_registry.cpp  ability_registry.hpp  ai_controller.cpp  ai_controller.hpp  colors.h  colors.hpp  exception.hpp  field.cpp  field.h  field.hpp  game.cpp  game.h  game.hpp  game_input.hpp  game_renderer.hpp  game_state.hpp  human_player.cpp  human_player.hpp  input_messages.hpp  input_pipe.hpp  main.cpp  message_generator.hpp  message_pipe.hpp  messages.hpp  messaging.hpp  player.cpp  player.hpp  registry.hpp  render_pipe.hpp  ship.cpp  ship.h  ship.hpp  ship_manager.cpp  ship_manager.h  (+8 more)
src/abilities/: CMakeLists.txt  ability.cpp  ability.hpp  ability_manager.cpp  ability_manager.hpp  ability_registration.hpp  ability_registry.cpp  ability_registry.hpp  double_damage.cpp  double_damage.hpp  scanner.cpp  scanner.hpp  sneaky_attack.cpp  sneaky_attack.hpp
src/control/: fight_control.cpp  fight_control.hpp  game_control.cpp  game_control.hpp  place_ships_control.cpp  place_ships_control.hpp  setup_field_control.cpp  setup_field_control.hpp  setup_ships_control.cpp  setup_ships_control.hpp
src/devices/: gui_input_device.cpp  gui_input_device.hpp  gui_output_device.cpp  gui_output_device.hpp  tui_input_device.cpp  tui_input_device.hpp  tui_output_device.cpp  tui_output_device.hpp
src/input/: CMakeLists.txt  (+7 more)
tst/: attack.tst  sample.tst
(+77 files in other folders)
